added button clicks

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
     <section class="mainsection">
-        <h2>Hello! Click the button below to see the carousel</h2>
+        <h2>Hello! <br>
+            Click the button below to see the carousel</h2>
         <button type="button" class="button" onclick="revealMessage()">Click me</button>
-        <div class="carousel">
+        <div id="carousel" >
             <div class="cards">
                 <img src="images/images (1).jpg" alt="Man coding">
                 <h3>Coding is poetry</h3>
