--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -19,7 +19,7 @@
         <button type="button" class="button" onclick="revealMessage()">Click me</button>
         <div id="carousel">
             <div class="cards">
-                <img src="images/images (1).jpg" alt="Man coding">
+                <img src="../images/images (1).jpg" alt="Man coding">
                 <h3>Coding is poetry</h3>
                 <p>Don't loose your motivation!It's an art to code.</p>
             </div>
